tests/spec/errors/impl_self_required.fable
// SPEC §5.1 (v0.2): parse errors — every method takes `self` first, with no
// type annotation, and impl blocks contain only `fn` items.
//? error: E0200
//? error: the first parameter of a method must be `self`
struct Point {
    x: Float,
}

impl Point {
    fn broken(dx: Float) -> Float {
        dx
    }
}
